Chess - SetGameState and use OtherScreen

--- a/Chess/Changelog.txt
+++ b/Chess/Changelog.txt
@@ -2,6 +2,7 @@
 == 25th Dec 2013 - 6th Jan 2014
 * Game namespace (move files)
 * Create Toolbar + UIModes
+* SetGameState and use OtherScreen
 
 
 == 2010 Italy
