--- a/Chess/Changelog.txt
+++ b/Chess/Changelog.txt
@@ -3,6 +3,7 @@
 * Game namespace (move files)
 * Create Toolbar + UIModes
 * SetGameState and use OtherScreen
+* Screen.SetState, rename UIModes to UIScreen
 
 
 == 2010 Italy
